# ambient-ai-email-agent

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PROJECT_GUIDE.md  README.md  docker-compose.yml  project_format.txt  pyproject.toml  render.yaml  requirements.txt
.streamlit/: secrets.toml.example
backend/src/: EVAL_GUIDE.md  config.py  db_init.py  dependencies.py  eval_runner.py  graph.py  hitl_handler.py  main.py  main_mock.py  model_test.py  schemas.py  state.py
backend/src/nodes/: node.py
backend/src/tools/: auth.py  google_calendar.py  google_gmail.py  tools.py
data/: golden_emails_test.jsonl  golden_set_emails.jsonl
frontend/: app.py  app_mock.py
notebooks/: 00_graph_compilation.ipynb  01_triage_evaluation.ipynb  02_react_agent.ipynb  03_evaluation.ipynb  04_hitl_demo.ipynb
src/: config.py  eval_runner.py  graph.py  hitl_handler.py  main.py  model_test.py  node.py  state.py  tools.py
src/nodes/: node.py
src/tools/: auth.py  calendar.py  gmail.py  tools.py
test/: test_calendar.py  test_calendar_send.py  test_gamil.py  test_hitl.py  test_hitl_force.py  test_node.py  test_real.py  test_real_api.py  test_triage.py
