[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_assistant"
version = "0.1.0"
dependencies = [
    "langgraph",
    "langchain",
    # Add your other requirements here
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]